// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrontPageStoryRows Container snapshots LeadingRow 1`] = `
.c16 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c7 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 66.67%;
}

.c13 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c3 {
  display: inline-block;
  vertical-align: top;
  width: 33.33%;
}

.c17 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c2 {
  position: relative;
}

.c12 {
  position: relative;
}

.c8 {
  position: relative;
}

.c4 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c19 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c5 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:visited {
  color: #6E6E73;
}

.c9 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c6 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c14 {
  padding: 0.5rem 0.25rem;
  background-color: #FFFFFF;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  color: #222222;
  height: 2rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c0 {
  border-bottom: 0.0625rem solid #F2F2F2;
  padding: 0.5rem 0 1rem;
}

.c0:first-child {
  padding-top: 0;
}

.c0:last-child {
  padding-bottom: 0;
  border: none;
}

@supports (display:grid) {
  .c1 {
    display: block;
  }
}

@supports (display:grid) {
  .c11 {
    display: block;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c7 {
    width: initial;
    grid-template-columns: repeat(4,1fr);
    grid-column-end: span 4;
  }
}

@media (min-width:63rem) {
  .c13 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c13 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c3 {
    display: block;
    width: initial;
    padding: initial;
    width: 100%;
    grid-template-columns: repeat(2,1fr);
    grid-column-end: span 2;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c17 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c17 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c2 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c12 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:25rem) {
  .c10 {
    position: absolute;
    bottom: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c18 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c19 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c19 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .c19 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (max-width:24.9375rem) {
  .c14 {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    padding: 1.5rem 0 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c0:first-child {
    padding-top: 1.5rem;
  }
}

<div>
  <li
    class="c0 c1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <h3
          class="c4"
        >
          <a
            class="c5"
            href="https://www.bbc.com/pidgin/sport-44416820"
          >
            Take dis predictor choose who go reach World Cup final
          </a>
        </h3>
        <time
          class="c6"
          datetime="2018-06-14"
        >
          14 June 2018
        </time>
      </div>
      <div
        class="c7"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <div
              class="lazyload-placeholder"
            />
          </div>
          <div
            class="c10"
          />
        </div>
      </div>
    </div>
  </li>
  <li
    class="c0 c11"
    dir="ltr"
    role="listitem"
  >
    <div
      class="c12"
    >
      <div
        class="c13"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <div
              class="lazyload-placeholder"
            />
          </div>
          <div
            class="c10"
          >
            <div
              aria-hidden="true"
              class="c14"
            >
              <div
                class="c15"
              >
                <svg
                  aria-hidden="true"
                  class="c16"
                  focusable="false"
                  height="12px"
                  viewBox="0 0 13 12"
                  width="13px"
                >
                  <path
                    d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                  />
                  <path
                    d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c17"
      >
        <h3
          class="c18"
        >
          <a
            class="c5"
            href="http://www.bbc.com/pidgin"
          >
            Audio promo
          </a>
        </h3>
        <p
          class="c19"
        >
          Summary
        </p>
        <time
          class="c6"
          datetime="2019-08-06"
        >
          6 August 2019
        </time>
      </div>
    </div>
  </li>
</div>
`;

exports[`FrontPageStoryRows Container snapshots RegularRow 1`] = `
.c9 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c3 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
  width: 100%;
}

.c3 >div {
  vertical-align: middle;
}

.c3 >div {
  display: inline-block;
  padding: 0;
  vertical-align: initial;
}

.c2 {
  position: relative;
}

.c4 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c10 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c5 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5:visited {
  color: #6E6E73;
}

.c6 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c7 {
  padding: 0.5rem 0.25rem;
  background-color: #FFFFFF;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  color: #222222;
  height: 2rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c0 {
  border-bottom: 0.0625rem solid #F2F2F2;
  padding: 0.5rem 0 1rem;
}

.c0:first-child {
  padding-top: 0;
}

.c0:last-child {
  padding-bottom: 0;
  border: none;
}

@supports (display:grid) {
  .c1 {
    display: block;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c3 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c3 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
    grid-column: 1 / span 6;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c2 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c10 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:63rem) {
  .c10 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (max-width:24.9375rem) {
  .c7 {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    padding: 1.5rem 0 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c0:first-child {
    padding-top: 1.5rem;
  }
}

<div>
  <li
    class="c0 c1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <h3
          class="c4"
        >
          <a
            class="c5"
            href="https://www.bbc.com/pidgin/sport-44416820"
          >
            Take dis predictor choose who go reach World Cup final
          </a>
        </h3>
        <time
          class="c6"
          datetime="2018-06-14"
        >
          14 June 2018
        </time>
      </div>
    </div>
  </li>
  <li
    class="c0 c1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          aria-hidden="true"
          class="c7"
        >
          <div
            class="c8"
          >
            <svg
              aria-hidden="true"
              class="c9"
              focusable="false"
              height="12px"
              viewBox="0 0 13 12"
              width="13px"
            >
              <path
                d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
              />
              <path
                d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
              />
            </svg>
          </div>
        </div>
        <h3
          class="c4"
        >
          <a
            class="c5"
            href="http://www.bbc.com/pidgin"
          >
            Audio promo
          </a>
        </h3>
        <p
          class="c10"
        >
          Summary
        </p>
        <time
          class="c6"
          datetime="2019-08-06"
        >
          6 August 2019
        </time>
      </div>
    </div>
  </li>
  <li
    class="c0 c1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <h3
          class="c4"
        >
          <a
            class="c5"
            href="https://www.bbc.com/pidgin/sport-44439411"
          >
            World Cup 2018 Quiz: You fit name all di players wey don score Super Eagles goal for World Cup?
          </a>
        </h3>
        <time
          class="c6"
          datetime="2018-06-14"
        >
          14 June 2018
        </time>
      </div>
    </div>
  </li>
  <li
    class="c0 c1"
    dir="ltr"
    role="listitem"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <h3
          class="c4"
        >
          <a
            class="c5"
            href="https://www.bbc.com/pidgin/sport-44425543"
          >
            Select your best ever African 11 players for World Cup
          </a>
        </h3>
        <time
          class="c6"
          datetime="2018-06-14"
        >
          14 June 2018
        </time>
      </div>
    </div>
  </li>
</div>
`;

exports[`FrontPageStoryRows Container snapshots TopRow 1`] = `
.c3 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

.c7 {
  display: inline-block;
  vertical-align: top;
}

.c2 {
  position: relative;
}

.c4 {
  position: relative;
}

.c6 {
  position: absolute;
  bottom: 0;
}

.c8 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c9 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c9:hover,
.c9:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:visited {
  color: #6E6E73;
}

.c5 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c10 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c0 {
  border-bottom: 0.0625rem solid #F2F2F2;
  padding: 0.5rem 0 1rem;
}

.c0:first-child {
  padding-top: 0;
}

.c0:last-child {
  padding-bottom: 0;
  border: none;
}

@supports (display:grid) {
  .c1 {
    display: block;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    width: calc(50% - 0.5rem);
    margin-bottom: 0;
  }
}

@media (min-width:63rem) {
  .c3 {
    width: calc(50% - 0.5rem);
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c3 {
    width: initial;
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    width: 50%;
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c7 {
    width: 50%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c7 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1 / span 6;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c2 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    padding: 1.5rem 0 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c0:first-child {
    padding-top: 1.5rem;
  }
}

<li
  class="c0 c1"
  dir="ltr"
  role="listitem"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="lazyload-placeholder"
          />
        </div>
        <div
          class="c6"
        />
      </div>
    </div>
    <div
      class="c7"
    >
      <h3
        class="c8"
      >
        <a
          class="c9"
          href="https://www.bbc.com/pidgin/sport-44416820"
        >
          Take dis predictor choose who go reach World Cup final
        </a>
      </h3>
      <time
        class="c10"
        datetime="2018-06-14"
      >
        14 June 2018
      </time>
    </div>
  </div>
</li>
`;
